modules/instance/security.tf
resource "aws_security_group" "load_balancer_sg" {
  vpc_id      = module.vpc.vpc
  name        = "allow_tls"
  description = "Allow Traffic inbound traffic"

  ingress {
    description = "allow from vpc"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "LB_SG"
  }
}
resource "aws_security_group" "instance_sg" {
  depends_on  = [aws_security_group.load_balancer_sg]
  vpc_id      = module.vpc.vpc
  name        = "instance"
  description = "Allow TLS inbound traffic"

  ingress {
    description = "TLS from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "instance-sg"
  }
}
